# max

./: .coverage  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  PAGINATION_IMPLEMENTATION.md  README.md  max.db-shm  max.db-wal  pyproject.toml
.claude/: BRIEF.md
.clearance/: README.md  policy-snapshots.json
.tact-experiments/construction/bidguard/: architecture.yaml  product.yaml
.tact-experiments/construction/construction-safety-observer/: architecture.yaml  product.yaml
.tact-experiments/construction/crewboard/: architecture.yaml  product.yaml
.tact-experiments/construction/fieldcraft/: architecture.yaml  product.yaml
.tact-experiments/construction/fieldvoice-mobile-app/: architecture.yaml  product.yaml
.tact-experiments/construction/paytrack-subcontractor-payments/: architecture.yaml  product.yaml
.tact-experiments/construction/procore-ai-context-server/: architecture.yaml  product.yaml
.tact-experiments/construction/prosync-payment-reconciliation/: architecture.yaml  product.yaml
.tact-experiments/construction/sitesync-mobile-bim-viewer/: architecture.yaml  product.yaml
.tact-experiments/construction/subpay-pulse/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/audience-insight/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/clipforge/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/creator-collab/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/creator-risk-score/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/creator-workflow-autopilot/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/podcast-attributor/: architecture.yaml  product.yaml
.tact-experiments/creator-economy/streamsync-mobile/: architecture.yaml  product.yaml
.tact-experiments/cybersecurity/ai-agent-oauth-security-tester/: architecture.yaml  product.yaml
.tact-experiments/cybersecurity/ai-agent-vuln-aggregator/: architecture.yaml  product.yaml
.tact-experiments/cybersecurity/ai-code-audit-pipeline/: architecture.yaml  product.yaml
.tact-experiments/cybersecurity/llama-cpp-compatibility-validator/: architecture.yaml  product.yaml
.tact-experiments/cybersecurity/shadow-ai-dlp-agent/: architecture.yaml  product.yaml
.tact/a2a-conformance/: architecture.yaml  product.yaml
.tact/agent-authz/: architecture.yaml  product.yaml
.tact/agent-comms-firewall/: architecture.yaml  product.yaml
.tact/agent-sandbox/: architecture.yaml  product.yaml
.tact/agent-trace/: architecture.yaml  product.yaml
.tact/agents-md-forge/: architecture.yaml  product.yaml
.tact/ai-coding-bench/: architecture.yaml  product.yaml
.tact/ai-sbom-generator/: architecture.yaml  product.yaml
.tact/channel-guard/: architecture.yaml  product.yaml
.tact/codecraft-linter/: architecture.yaml  product.yaml
.tact/estimate-guard/: architecture.yaml  product.yaml
.tact/feature-guard/: architecture.yaml  product.yaml
.tact/field-knowledge/: architecture.yaml  product.yaml
.tact/fn-call-harness/: architecture.yaml  product.yaml
.tact/health-tool/: architecture.yaml  product.yaml
.tact/inference-advisor/: architecture.yaml  product.yaml
.tact/infra-gate/: architecture.yaml  product.yaml
.tact/mcp-changelog-watcher/: architecture.yaml  product.yaml
.tact/mcp-composer/: architecture.yaml  product.yaml
.tact/mcp-dependency-firewall/: architecture.yaml  product.yaml
.tact/mcp-guard/: architecture.yaml  product.yaml
.tact/mcp-guardrails-proxy/: architecture.yaml  product.yaml
.tact/mcp-registry/: architecture.yaml  product.yaml
.tact/mcp-test-runner/: architecture.yaml  product.yaml
.tact/media-sandbox/: architecture.yaml  product.yaml
.tact/patch-verify/: architecture.yaml  product.yaml
.tact/responsibility-gate/: architecture.yaml  product.yaml
.tact/role-bridge/: architecture.yaml  product.yaml
.tact/safe-ingest/: architecture.yaml  product.yaml
.tact/stack-split/: architecture.yaml  product.yaml
.tact/vsaas-scaffold/: architecture.yaml  product.yaml
clearance-report/: clearance-report.json  clearance-report.md  policy-monitor.json  policy-monitor.md
examples/: store_context_demo.py
profiles/: ai-infra.yaml  ai-infrastructure.yaml  construction.yaml  creator-economy.yaml  cybersecurity.yaml  devtools.yaml  education.yaml  fintech.yaml  healthcare.yaml  hr.yaml  legaltech.yaml  proptech.yaml  schema.yaml  supply-chain.yaml  sustainability.yaml
reports/: design-candidates.md
research/: landscape-synthesis-2026-03.md
src/fastmcp/: __init__.py
src/max/: __init__.py  __main__.py  cli.py  config.py  focus.py
tests/: _design_brief_artifact_endpoint_helpers.py  conftest.py  test_acceptance_criteria.py  test_account_health_score.py  test_adapter_approval_stats.py  test_adapter_config.py  test_adapter_metrics.py  test_adapter_quality_stats.py  test_adapter_registry.py  test_adoption_lifecycle.py  test_airtable_adapter.py  test_airtable_record_publisher.py  test_airtable_records_publisher.py  test_alertmanager_adapter.py  test_analysis_prior_art.py  test_analysis_roles.py  test_angellist_adapter.py  test_ansible_playbooks.py  test_api.py  test_api_asana_publish.py  test_api_azure_devops_publish.py  test_api_budget_usage.py  test_api_budget_usage_json_renderer.py  test_api_clickup_publish.py  test_api_customer_discovery.py  test_api_design_brief_assumption_ledger.py  test_api_design_brief_azure_devops_publish.py  test_api_design_brief_bitbucket_publish.py  test_api_design_brief_bundle.py  test_api_design_brief_buyer_faq.py  test_api_design_brief_churn_risk_report.py  test_api_design_brief_clickup_publish.py  test_api_design_brief_competitive_alternatives.py  test_api_design_brief_competitive_landscape.py  test_api_design_brief_competitive_landscape_markdown.py  test_api_design_brief_compliance_checklist_markdown.py  test_api_design_brief_confluence_publish.py  test_api_design_brief_conversion_risk.py  test_api_design_brief_customer_journey_map.py  test_api_design_brief_data_room_index.py  (+969 more)
(+1885 files in other folders)
