[project]
name = "max"
version = "0.1.0"
description = "Generalized idea generation engine — transforms ecosystem signals into tact-compatible project specs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.scripts]
max = "max.cli:main"

[project.entry-points."max.adapters"]
hackernews = "max.sources.hackernews:HackerNewsAdapter"
npm_registry = "max.sources.npm_registry:NpmRegistryAdapter"
reddit = "max.sources.reddit:RedditAdapter"
github = "max.sources.github:GitHubAdapter"
github_releases = "max.sources.github_releases:GitHubReleasesAdapter"
github_funding = "max.sources.github_funding:GitHubFundingAdapter"
pypi_registry = "max.sources.pypi_registry:PyPIRegistryAdapter"
github_issues = "max.sources.github_issues:GitHubIssuesAdapter"
github_discussions = "max.sources.github_discussions:GitHubDiscussionsAdapter"
gitlab_issues = "max.sources.gitlab_issues:GitLabIssuesAdapter"
security_advisories = "max.sources.security_advisories:SecurityAdvisoriesAdapter"
nvd_cve = "max.sources.nvd_cve:NvdCveAdapter"
product_hunt = "max.sources.product_hunt:ProductHuntAdapter"
stackoverflow = "max.sources.stackoverflow:StackOverflowAdapter"
discourse = "max.sources.discourse:DiscourseAdapter"
arxiv = "max.sources.arxiv:ArxivAdapter"
openalex = "max.sources.openalex:OpenAlexAdapter"
devto = "max.sources.devto:DevtoAdapter"
bluesky = "max.sources.bluesky:BlueskyAdapter"
pubmed = "max.sources.pubmed:PubMedAdapter"
rss_feed = "max.sources.rss_feed:RssFeedAdapter"
crates_io = "max.sources.crates_io:CratesIoAdapter"
lobsters = "max.sources.lobsters:LobstersAdapter"
nuget = "max.sources.nuget:NuGetAdapter"
dockerhub = "max.sources.dockerhub:DockerHubAdapter"
mcp_registry = "max.sources.mcp_registry:McpRegistryAdapter"
stackshare = "max.sources.stackshare:StackShareAdapter"
huggingface = "max.sources.huggingface:HuggingFaceAdapter"
awesome_lists = "max.sources.awesome_lists:AwesomeListsAdapter"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
