[project]
name = "max"
version = "0.1.0"
description = "Generalized idea generation engine — transforms ecosystem signals into tact-compatible project specs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "hypothesis>=6.98.0",
]

[project.scripts]
max = "max.cli:main"

[project.entry-points."max.adapters"]
hackernews = "max.sources.hackernews:HackerNewsAdapter"
hackernews_whoishiring = "max.sources.hackernews_whoishiring:HackerNewsWhoIsHiringAdapter"
hackernews_showhn = "max.sources.hackernews_showhn:HackerNewsShowHNAdapter"
hackernews_askhn = "max.sources.hackernews_askhn:HackerNewsAskHNAdapter"
npm_registry = "max.sources.npm_registry:NpmRegistryAdapter"
npm_maintainer_activity = "max.sources.npm_maintainer_activity:NpmMaintainerActivityAdapter"
npm_download_trends = "max.sources.npm_download_trends:NpmDownloadTrendsAdapter"
npm_dependents = "max.sources.npm_dependents:NpmDependentsAdapter"
reddit = "max.sources.reddit:RedditAdapter"
github = "max.sources.github:GitHubAdapter"
github_trending = "max.sources.github_trending:GitHubTrendingAdapter"
github_releases = "max.sources.github_releases:GitHubReleasesAdapter"
github_funding = "max.sources.github_funding:GitHubFundingAdapter"
github_sponsors = "max.sources.github_sponsors:GitHubSponsorsAdapter"
funding_rounds = "max.sources.funding_rounds:FundingRoundsAdapter"
opencollective = "max.sources.opencollective:OpenCollectiveAdapter"
pypi_registry = "max.sources.pypi_registry:PyPIRegistryAdapter"
wordpress_plugins = "max.sources.wordpress_plugins:WordPressPluginsAdapter"
python_peps = "max.sources.python_peps:PythonPepsAdapter"
pypi_download_trends = "max.sources.pypi_download_trends:PyPIDownloadTrendsAdapter"
pypi_classifiers = "max.sources.pypi_classifiers:PyPIClassifiersAdapter"
pypi_releases = "max.sources.pypi_releases:PyPIReleasesAdapter"
pypi_maintainer_activity = "max.sources.pypi_maintainer_activity:PyPIMaintainerActivityAdapter"
pubdev = "max.sources.pubdev:PubDevAdapter"
deno_registry = "max.sources.deno_registry:DenoRegistryAdapter"
github_issues = "max.sources.github_issues:GitHubIssuesAdapter"
github_pull_requests = "max.sources.github_pull_requests:GitHubPullRequestsAdapter"
github_actions = "max.sources.github_actions:GitHubActionsAdapter"
github_workflow_runs = "max.sources.github_workflow_runs:GitHubWorkflowRunsAdapter"
github_marketplace_actions = "max.sources.github_marketplace_actions:GitHubMarketplaceActionsAdapter"
github_octoverse = "max.sources.github_octoverse:GitHubOctoverseAdapter"
snyk_reports = "max.sources.snyk_reports:SnykReportsAdapter"
agentseal_mcp_scan = "max.sources.agentseal_mcp_scan:AgentSealMcpScanAdapter"
ai_code_trust_reports = "max.sources.ai_code_trust_reports:AICodeTrustReportsAdapter"
metr_productivity_reports = "max.sources.metr_productivity_reports:MetrProductivityReportsAdapter"
agent_failure_dataset = "max.sources.agent_failure_dataset:AgentFailureDatasetAdapter"
github_discussions = "max.sources.github_discussions:GitHubDiscussionsAdapter"
github_discussion_comments = "max.sources.github_discussion_comments:GitHubDiscussionCommentsAdapter"
github_repository_topics = "max.sources.github_repository_topics:GitHubRepositoryTopicsAdapter"
gitlab_issues = "max.sources.gitlab_issues:GitLabIssuesAdapter"
gitlab_merge_requests = "max.sources.gitlab_merge_requests:GitLabMergeRequestsAdapter"
gitlab_epics = "max.sources.gitlab_epics:GitLabEpicsAdapter"
gitlab_releases = "max.sources.gitlab_releases:GitLabReleasesAdapter"
bitbucket_pull_requests = "max.sources.bitbucket_pull_requests:BitbucketPullRequestsAdapter"
security_advisories = "max.sources.security_advisories:SecurityAdvisoriesAdapter"
rustsec_advisories = "max.sources.rustsec_advisories:RustSecAdvisoriesAdapter"
osv_vulnerabilities = "max.sources.osv_vulnerabilities:OsvVulnerabilitiesAdapter"
cisa_kev = "max.sources.cisa_kev:CisaKevAdapter"
cve_project = "max.sources.cve_project:CveProjectAdapter"
nvd_cve = "max.sources.nvd_cve:NvdCveAdapter"
epss_scores = "max.sources.epss_scores:EpssScoresAdapter"
product_hunt = "max.sources.product_hunt:ProductHuntAdapter"
stackexchange = "max.sources.stackexchange:StackExchangeAdapter"
stackoverflow = "max.sources.stackoverflow:StackOverflowAdapter"
stackoverflow_tag_trends = "max.sources.stackoverflow_tag_trends:StackOverflowTagTrendsAdapter"
stackoverflow_survey = "max.sources.stackoverflow_survey:StackOverflowSurveyAdapter"
jetbrains_survey = "max.sources.jetbrains_survey:JetBrainsSurveyAdapter"
jetbrains_marketplace = "max.sources.jetbrains_marketplace:JetBrainsMarketplaceAdapter"
discourse = "max.sources.discourse:DiscourseAdapter"
arxiv = "max.sources.arxiv:ArxivAdapter"
openalex = "max.sources.openalex:OpenAlexAdapter"
devto = "max.sources.devto:DevtoAdapter"
bluesky = "max.sources.bluesky:BlueskyAdapter"
mastodon = "max.sources.mastodon:MastodonAdapter"
pubmed = "max.sources.pubmed:PubMedAdapter"
clinical_trials = "max.sources.clinical_trials:ClinicalTrialsAdapter"
rss_feed = "max.sources.rss_feed:RssFeedAdapter"
crates_io = "max.sources.crates_io:CratesIoAdapter"
crates_dependents = "max.sources.crates_dependents:CratesDependentsAdapter"
hexpm = "max.sources.hexpm:HexPmAdapter"
hexpm_download_trends = "max.sources.hexpm_download_trends:HexPmDownloadTrendsAdapter"
lobsters = "max.sources.lobsters:LobstersAdapter"
nuget = "max.sources.nuget:NuGetAdapter"
maven_central = "max.sources.maven_central:MavenCentralAdapter"
rubygems = "max.sources.rubygems:RubyGemsAdapter"
rubygems_download_trends = "max.sources.rubygems_download_trends:RubyGemsDownloadTrendsAdapter"
packagist = "max.sources.packagist:PackagistAdapter"
packagist_download_trends = "max.sources.packagist_download_trends:PackagistDownloadTrendsAdapter"
dockerhub = "max.sources.dockerhub:DockerHubAdapter"
dockerhub_tag_velocity = "max.sources.dockerhub_tag_velocity:DockerHubTagVelocityAdapter"
artifact_hub = "max.sources.artifact_hub:ArtifactHubAdapter"
homebrew_formulae = "max.sources.homebrew_formulae:HomebrewFormulaeAdapter"
home_assistant_integrations = "max.sources.home_assistant_integrations:HomeAssistantIntegrationsAdapter"
mcp_registry = "max.sources.mcp_registry:McpRegistryAdapter"
mcp_protocol_roadmap = "max.sources.mcp_protocol_roadmap:McpProtocolRoadmapAdapter"
glama_mcp_stats = "max.sources.glama_mcp_stats:GlamaMcpStatsAdapter"
stackshare = "max.sources.stackshare:StackShareAdapter"
huggingface = "max.sources.huggingface:HuggingFaceAdapter"
awesome_lists = "max.sources.awesome_lists:AwesomeListsAdapter"
openssf_scorecard = "max.sources.openssf_scorecard:OpenSSFScorecardAdapter"
openssf_security_insights = "max.sources.openssf_security_insights:OpenSSFSecurityInsightsAdapter"
cncf_landscape = "max.sources.cncf_landscape:CncfLandscapeAdapter"
chrome_web_store = "max.sources.chrome_web_store:ChromeWebStoreAdapter"
open_vsx = "max.sources.open_vsx:OpenVsxAdapter"
open_vsx_download_trends = "max.sources.open_vsx_download_trends:OpenVsxDownloadTrendsAdapter"
sourceforge_projects = "max.sources.sourceforge_projects:SourceForgeProjectsAdapter"
vscode_marketplace = "max.sources.vscode_marketplace:VSCodeMarketplaceAdapter"
figma_community = "max.sources.figma_community:FigmaCommunityAdapter"
terraform_registry = "max.sources.terraform_registry:TerraformRegistryAdapter"
go_packages = "max.sources.go_packages:GoPackagesAdapter"
swift_package_index = "max.sources.swift_package_index:SwiftPackageIndexAdapter"
kubernetes_keps = "max.sources.kubernetes_keps:KubernetesKepsAdapter"
apis_guru = "max.sources.apis_guru:ApisGuruAdapter"
federal_register_healthcare = "max.sources.federal_register_healthcare:FederalRegisterHealthcareAdapter"
a2a_spec = "max.sources.a2a_spec:A2ASpecAdapter"
ietf_datatracker = "max.sources.ietf_datatracker:IetfDatatrackerAdapter"
openapi_specs = "max.sources.openapi_specs:OpenApiSpecsAdapter"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
